fix background image on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -682,7 +682,8 @@ button.active {
   }
 
   #app {
-    background-size: contain;
+    min-height: 50%;
+
   }
 
 }
